--- a/src/css/scss/sections/_news-top.scss
+++ b/src/css/scss/sections/_news-top.scss
@@ -1,5 +1,13 @@
 .breadcrumb-container {
     padding: 2rem;
+
+    h1 {
+      text-align: center;
+
+      @include lg {
+        text-align: start;
+      }
+    }
   }
   
   .location p {
